# thinking-functionally-with-haskell

./: README.md  flake.nix
01what-is-fp/: 01what-is-fp.cabal  CHANGELOG.md
01what-is-fp/app/: Main.hs
01what-is-fp/src/: Anagrams.hs  CommonWords.hs  Song.hs
01what-is-fp/test/: Main.hs  SongTest.hs  TestA.hs  TestE.hs
02-expressions-types-values/: out.html  x02.cabal
02-expressions-types-values/app/: Main.hs
02-expressions-types-values/bench/: bench.hs
02-expressions-types-values/src/: Beaver.lhs  CreditCard.hs  Date.hs  Exponent.hs  First.hs  ModerniseC.hs  Palindrome.hs
02-expressions-types-values/test/: CreditCardTest.hs  DateTest.hs  ExponentTest.hs  Main.hs  ModerniseCTest.hs  PalindromeTest.hs
08-pretty-print/: 08-pretty-print.lhs  CHANGELOG.md  x08-pretty-print.cabal
08-pretty-print/src/: Document.hs
11-parsing/: CHANGELOG.md  x11-parsing.cabal
11-parsing/src/: Parser.hs
11-parsing/test/: Main.hs  ParserTest.hs
