cabal-version:      3.0
name:               x01
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-extensions: QuasiQuotes

library
    import:           warnings
    exposed-modules:  Song
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , raw-strings-qq
    hs-source-dirs:   src
    default-language: Haskell2010

executable exe
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , x01

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    other-modules:
        TestA
        TestE
        SongTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , x01
        , tasty
        , tasty-hunit
        , tasty-quickcheck
        , raw-strings-qq
