cabal-version:      3.0
name:               x02
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Beaver
        Date
        Exponent
        ModerniseC
        CreditCard
        Palindrome
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x02

    hs-source-dirs:   app

test-suite tests
    import:           warnings
    other-modules:
        DateTest
        ExponentTest
        ModerniseCTest
        CreditCardTest
        PalindromeTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , raw-strings-qq
        , tasty
        , tasty-hunit
        , tasty-quickcheck
        , x02

benchmark bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          bench.hs
    hs-source-dirs:   bench
    build-depends:
        base ^>=4.16.4.0
        , criterion
        , x02
